fix: fix wrapping

--- a/css/index.css
+++ b/css/index.css
@@ -281,6 +281,8 @@ body {
 
   margin: 3px 0;
   padding-left: 10px;
+
+  text-align: center;
 }
 
 .balloon__item::before {
@@ -295,6 +297,7 @@ body {
   padding: 1px 5px;
 
   color: #fff;
+  white-space: nowrap;
 
   border-radius: 50px;
   background: #000;
